k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cloud-platform
  labels:
    app.kubernetes.io/name: cloud-platform
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: cloud-platform
  ports:
    - name: http
      port: 80
      targetPort: http
